fixed video not showing on tablet, mobile, removed redundant code on index.html

--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -98,25 +98,3 @@ header .overlay {
   opacity: 0.5;
   z-index: 1;
 }
-
-
-/*header .overlay_red {*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    background-color: lightgrey;*/
-/*    opacity: 0.5;*/
-/*    z-index: 1;*/
-/*}*/
-
-
-@media (pointer: coarse) and (hover: none) {
-  header {
-    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
-  }
-  header video {
-    display: none;
-  }
-}
